# ida-pro-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_zh.md  pyproject.toml
.github/workflows/: release.yml
skills/idapython/: SKILL_zh.md
src/ida_pro_mcp/: ida_mcp.py  server.py
src/ida_pro_mcp/ida_mcp/: __init__.py  api_analysis.py  api_core.py  api_modify.py  auth.py  cache.py  config.py  framework.py  http.py  port_utils.py  server_manager.py  sync.py  ui.py  utils.py
src/ida_pro_mcp/ida_mcp/tests/: __init__.py  test_api_resources.py
src/ida_pro_mcp/ida_mcp/zeromcp/: mcp.py
