[project]
name = "ida-pro-mcp-xjoker"
version = "1.0.2"
description = "Vibe reversing with IDA Pro (enhanced fork)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "mrexodia" },
    { name = "can1357" },
    { name = "IDA Pro MCP Contributors" },
]
maintainers = [
    { name = "xjoker" },
]
keywords = ["ida", "mcp", "llm", "plugin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "idapro>=0.0.7",
    "tomli-w>=1.0.0",
]

[project.urls]
Repository = "https://github.com/xjoker/ida-pro-mcp"
Issues = "https://github.com/xjoker/ida-pro-mcp/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ida-pro-mcp = "ida_pro_mcp.server:main"
idalib-mcp = "ida_pro_mcp.idalib_server:main"
ida-mcp-test = "ida_pro_mcp.test:main"

[tool.pyright]
include = ["src/ida_pro_mcp"]

[tool.ruff]
exclude = ["src/ida_pro_mcp/ida_mcp/zeromcp/*.py"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "commitizen>=4.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.2"
version_files = [
    "pyproject.toml:^version"
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
